src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Global Sales Process</fullName>
        <description>Global sales process used for all QIMS business units.</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Identifying Opportunity</fullName>
        </values>
        <values>
            <fullName>2%2E Qualifying Opportunity</fullName>
        </values>
        <values>
            <fullName>3%2E Developing Proposal</fullName>
        </values>
        <values>
            <fullName>4%2E Delivering Proposal</fullName>
        </values>
        <values>
            <fullName>5%2E Finalizing Deal</fullName>
        </values>
        <values>
            <fullName>6%2E Received ATP%2FLOI</fullName>
        </values>
        <values>
            <fullName>7a%2E Closed Won</fullName>
        </values>
        <values>
            <fullName>7b%2E Closed Lost</fullName>
        </values>
        <values>
            <fullName>In-Hand</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APAC_Triage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-889 - next gen permission set</description>
        <label>APAC Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AR_Comments__c</fullName>
        <description>ESPSFDCQI-17973</description>
        <inlineHelpText>Provide your comments here if Agreement/Agreement repository is not required for this opportunity</inlineHelpText>
        <label>Agreement Repository Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ATP_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-12</description>
        <label>ATP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATP_Expenses__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2683 -</description>
        <label>ATP Expenses</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ATP_Professional_Fees__c</fullName>
        <description>MC_CRM_ESPSFDCQI-12_The ATP value agreed upon between QI and the customer.</description>
        <inlineHelpText>The ATP value agreed upon between QI and the customer.</inlineHelpText>
        <label>ATP Professional Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>ESPSFDCQI-16504</description>
        <formula>TEXT(Account.AccountCountry__c)</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_MDM_Parent_Customer_Code__c</fullName>
        <description>ESPSFDCQI-16504</description>
        <formula>Account.MDM_Parent_Customer_Code__c</formula>
        <label>Account MDM Parent Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sector__c</fullName>
        <description>ESPSFDCQI-12285</description>
        <label>Account Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Life Sciences R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Life Sciences MCIH</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Age__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6736</description>
        <formula>Actual_Close_Date__c -  DATEVALUE( CreatedDate )</formula>
        <inlineHelpText>&quot;Actual Close Date&quot;- &quot;Created Date&quot;</inlineHelpText>
        <label>Actual Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Timestamp__c</fullName>
        <label>Actual Close Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_RFP_Due_Date__c</fullName>
        <description>ESPSFDCQI-17459</description>
        <label>Actual RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RFP_Release_Date__c</fullName>
        <description>ESPSFDCQI-17459</description>
        <label>Actual RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RFP_Sent_Date__c</fullName>
        <description>ESPSFDCQI-17459</description>
        <label>Actual RFP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_to_RWS_Triage_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-7101</description>
        <label>Add to RWS Triage Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6651</description>
        <label>Additional Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Primary_Loss_Reason_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-253 - Additional details for the selected primary loss reason for an Opportunity.</description>
        <inlineHelpText>Additional details of the primary loss reason for the Opportunity.</inlineHelpText>
        <label>Additional Primary Loss Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>25-30%</fullName>
                </value>
                <value>
                    <fullName>30% +</fullName>
                </value>
                <value>
                    <fullName>Accelerated Patient Access, Recruitment &amp; Engagement (APARE)</fullName>
                </value>
                <value>
                    <fullName>Accelerated Site ID &amp; Activation (ASIDA)</fullName>
                </value>
                <value>
                    <fullName>Additional Services</fullName>
                </value>
                <value>
                    <fullName>All rates too high</fullName>
                </value>
                <value>
                    <fullName>Alternative Scenario/Innovation</fullName>
                </value>
                <value>
                    <fullName>Bonus/Penalty</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Clinical Operations delivery issues on current/past study</fullName>
                </value>
                <value>
                    <fullName>Cost Containment</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>CRA&apos;s</fullName>
                </value>
                <value>
                    <fullName>CRA rates</fullName>
                </value>
                <value>
                    <fullName>Data Management Rates</fullName>
                </value>
                <value>
                    <fullName>DM/Bios</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>Epidemeology</fullName>
                </value>
                <value>
                    <fullName>Epidemiology</fullName>
                </value>
                <value>
                    <fullName>Evidence Driven Design (EDD)</fullName>
                </value>
                <value>
                    <fullName>Evidence not applied effectively/not available</fullName>
                </value>
                <value>
                    <fullName>Feasibility/Country &amp; Site Selection</fullName>
                </value>
                <value>
                    <fullName>FPI or LPO</fullName>
                </value>
                <value>
                    <fullName>Insufficient Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Insufficient lab storage</fullName>
                </value>
                <value>
                    <fullName>QuintilesIMS is too big/too slow</fullName>
                    <label>IQVIA is too big/too slow</label>
                </value>
                <value>
                    <fullName>QuintilesIMS not seen as being Flexible</fullName>
                    <label>IQVIA not seen as being Flexible</label>
                </value>
                <value>
                    <fullName>QuintilesIMS not seen as Leader in Indication / Therapeutic Area/Scientific expertise</fullName>
                    <label>IQVIA not seen as Leader in Indication / Therapeutic Area/Scientific expertise</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Primary_Win_Loss_Reason_Infor__c</fullName>
        <description>CRM-MC-ESPSFDCQI-253 - Free text for detailing any additional information that is not captured within Primary Reason, Primary Reason Detail, or Additional Primary Reason Detail.</description>
        <inlineHelpText>Free text field for detailing any additional information on the reason the Opportunity was won or lost.</inlineHelpText>
        <label>Additional Primary Reason Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Primary_Win_Reason_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-253 - Additional details for the selected primary win reason for an Opportunity.</description>
        <inlineHelpText>Additional details of the primary win reason for the Opportunity.</inlineHelpText>
        <label>Additional Primary Win Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Win_Reason_Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>25-30%</fullName>
                </value>
                <value>
                    <fullName>30% +</fullName>
                </value>
                <value>
                    <fullName>Ability to recruit Phase I HNV&apos;s</fullName>
                </value>
                <value>
                    <fullName>Ability to recruit Phase I patient population</fullName>
                </value>
                <value>
                    <fullName>Able to gain Sponsor confidence compared to competition</fullName>
                </value>
                <value>
                    <fullName>Accelerated Patient Access, Recruitment &amp; Engagement (APARE)</fullName>
                </value>
                <value>
                    <fullName>Accelerated Site ID &amp; Activation (ASIDA)</fullName>
                </value>
                <value>
                    <fullName>Adherence to overall Timeline</fullName>
                </value>
                <value>
                    <fullName>Adjusted Timeline</fullName>
                </value>
                <value>
                    <fullName>All rates too high</fullName>
                </value>
                <value>
                    <fullName>Alternative Scenario/Innovation</fullName>
                </value>
                <value>
                    <fullName>Availability of Phase I clinic space</fullName>
                </value>
                <value>
                    <fullName>Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Bonus/Penalty</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Cost Containment</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>CRA&apos;s</fullName>
                </value>
                <value>
                    <fullName>CRA rates</fullName>
                </value>
                <value>
                    <fullName>Creative option (multi-study efficiencies)</fullName>
                </value>
                <value>
                    <fullName>Data/depth of knowledge demonstrated to support the strategy</fullName>
                </value>
                <value>
                    <fullName>Data Management Rates</fullName>
                </value>
                <value>
                    <fullName>Decreased/limited Countries</fullName>
                </value>
                <value>
                    <fullName>Decreased/limited Services</fullName>
                </value>
                <value>
                    <fullName>DM/Bios</fullName>
                </value>
                <value>
                    <fullName>Early Termination</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>ECG Machine Capability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Update_Number__c</fullName>
        <description>CRM-MC-ESPSFDCQI-10497 - List the associated RITM/Story Number related to the update request</description>
        <inlineHelpText>List the associated RITM/Story Number related to the update request</inlineHelpText>
        <label>Admin Update Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Plan_last_update_date__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3144 - populated with today whenever the advance plan field is updated</description>
        <label>Advance Plan last update date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advanced_Plan__c</fullName>
        <description>CRM-MC-ESPSFDCQI-107 - For capturing any past or future interactions and next steps on the Opportunity.</description>
        <label>Advance Plan / Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_In_USD__c</fullName>
        <formula>Amount * Conversion_Rate_To_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount In USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Repeat__c</fullName>
        <description>Amount - Repeat</description>
        <label>Amount - Repeat</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Sale_Type__c</field>
            <operation>equals</operation>
            <value>Repeat</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Analytical_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-2312 - AIML – Artificial Intelligence / Machine Learning used in the delivery</description>
        <inlineHelpText>AIML – Artificial Intelligence / Machine Learning used in the delivery</inlineHelpText>
        <label>Artificial Intelligence/Machine Learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_Contract_FE_Date__c</fullName>
        <description>ESPSFDCQI-17499</description>
        <inlineHelpText>Enter Anticipated Contract Fully Executed Date</inlineHelpText>
        <label>Anticipated Contract FE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_RFP_Date__c</fullName>
        <description>MC-CRM-ESPSFDCQI-2692 -</description>
        <label>Anticipated RFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <description>ESPSFDCQI-13511</description>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_BNF_Count__c</fullName>
        <description>Number of BNF records (iBNF/eBNF/MiBNF) With BNF Status = Accepted or SAP Contract Confirmed</description>
        <label>Approved BNF Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Artificial_Intelligence_ML_Type__c</fullName>
        <description>ESPSFDCQI-14998</description>
        <label>Artificial Intelligence/ ML Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generative AI</fullName>
                </value>
                <value>
                    <fullName>Other AIML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avacare_Enrollment_Goal__c</fullName>
        <description>ESPSFDCQI-16396,ESPSFDCQI-17128</description>
        <inlineHelpText>Sum of Site Submissions in Awarded Status</inlineHelpText>
        <label>Avacare Enrollment Goal</label>
        <summarizedField>Site_Submission__c.Finalized_Site_Enrollment_Goal__c</summarizedField>
        <summaryFilterItems>
            <field>Site_Submission__c.Status__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </summaryFilterItems>
        <summaryForeignKey>Site_Submission__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Awarded_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-56</description>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDM_Delivery_Resources__c</fullName>
        <description>ESPSFDCQI-12759</description>
        <inlineHelpText>Bid Defense Delivery Resource Requirements</inlineHelpText>
        <label>BDM Delivery Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US LP Project Manager</fullName>
                </value>
                <value>
                    <fullName>EMEA LP Project Manager</fullName>
                </value>
                <value>
                    <fullName>APAC LP Project Manager</fullName>
                </value>
                <value>
                    <fullName>US LP Epidemiology/MW Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>EMEA LP Epidemiology/MW Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>APAC LP Epidemiology/MW Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>US LP Biostatistics Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>EMEA LP Biostatistics Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>APAC LP Biostatistics Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>US LP Data Management Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>EMEA LP Data Management Delivery Lead</fullName>
                </value>
                <value>
                    <fullName>APAC LP Data Management Delivery Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM_Resources__c</fullName>
        <description>ESPSFDCQI-11567 / ESPSFDCQI-12759</description>
        <inlineHelpText>Bid Defense Oversight/Preparation Resource Requirements</inlineHelpText>
        <label>BDM Prep Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evidence Strategy Lead</fullName>
                </value>
                <value>
                    <fullName>LP Project Director</fullName>
                </value>
                <value>
                    <fullName>LP Epidemiology/MW Oversight</fullName>
                </value>
                <value>
                    <fullName>LP Biostatistics Oversight</fullName>
                </value>
                <value>
                    <fullName>LP Data Management Oversight</fullName>
                </value>
                <value>
                    <fullName>LP_Regulatory_Advisor</fullName>
                    <label>LP Regulatory Advisor</label>
                </value>
                <value>
                    <fullName>Site Strategy Lead</fullName>
                </value>
                <value>
                    <fullName>Analytics Insight Manager</fullName>
                </value>
                <value>
                    <fullName>Medic Strategy Lead</fullName>
                </value>
                <value>
                    <fullName>Regional Strategy Lead</fullName>
                </value>
                <value>
                    <fullName>Integrated Health Platform Lead</fullName>
                </value>
                <value>
                    <fullName>HEOR Lead</fullName>
                </value>
                <value>
                    <fullName>IRES/RW S&amp;I Lead</fullName>
                </value>
                <value>
                    <fullName>SOMS Lead</fullName>
                </value>
                <value>
                    <fullName>Patient Centered Endpoints Lead</fullName>
                </value>
                <value>
                    <fullName>eCOA Lead</fullName>
                </value>
                <value>
                    <fullName>LCNIS Lead</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs Lead</fullName>
                </value>
                <value>
                    <fullName>Safety Evidence for Regulators Lead</fullName>
                </value>
                <value>
                    <fullName>Database Services Lead</fullName>
                </value>
                <value>
                    <fullName>Inteliquet Lead</fullName>
                </value>
                <value>
                    <fullName>Data Strategy Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Expected_Opportunity_Amount__c</fullName>
        <description>ESPSFDCQI-16396</description>
        <label>BD Expected Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BD_Lead_Sub_Region__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2182- This field is part of the OWF Process</description>
        <formula>BD_Sub_Region_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BD Location</inlineHelpText>
        <label>BD Lead Sub Region Del</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Sub_Region_2__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5424</description>
        <formula>TEXT(Owner.SUBREGION__c)</formula>
        <label>BD Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIOS_Workshare_location__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5130</description>
        <label>BIOS Workshare location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China (Mainland)</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BNF_Count__c</fullName>
        <description>ESPSFDCQI-14231: Numbers of BNF records (iBNF/eBNF/MiBNF Component) on the opportunity</description>
        <formula>Opportunity_Extension__r.BNF_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BNF Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_C_Comments__c</fullName>
        <description>ESPSFDCQI-16396</description>
        <label>B&amp;C Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BidTeam_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-2944 - Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</description>
        <inlineHelpText>Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</inlineHelpText>
        <label>Bid Team 2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__r.PIC_Eligible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Bid Team 2)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BidTeam_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-2944 - Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</description>
        <inlineHelpText>Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</inlineHelpText>
        <label>Bid Team 3</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__r.PIC_Eligible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Bid Team 3)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BidTeam_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-2944 - Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</description>
        <inlineHelpText>Select the name of a person on the bid team who will receive credit for sale. The PIC is considered Bid Team 1.</inlineHelpText>
        <label>Bid Team 4</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__r.PIC_Eligible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Bid Team 4)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Defense_Date__c</fullName>
        <description>MC_CRM_ESPSFDCQI-133_The date of the Bid Defense. Required when QI has been invited to present by the client.</description>
        <inlineHelpText>Bid Defense Date</inlineHelpText>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Team_2_Split__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1509 - Percent split for bid team member</description>
        <inlineHelpText>Percent split for bid team member</inlineHelpText>
        <label>Bid Team 2 Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_3_Split__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1509 - Percent split for bid team member</description>
        <inlineHelpText>Percent split for bid team member</inlineHelpText>
        <label>Bid Team 3 Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Team_4_Split__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1509 - Percent split for bid team member</description>
        <inlineHelpText>Percent split for bid team member</inlineHelpText>
        <label>Bid Team 4 Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <description>ESPSFDCQI-8509</description>
        <label>Billing System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>SAP and PeopleSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Binary_Decision__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4376</description>
        <label>Binary Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <externalId>true</externalId>
        <label>Box Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Url__c</fullName>
        <description>Under ESPSFDCQI-15029</description>
        <label>Box Folder Url</label>
        <type>Url</type>
    </fields>
</CustomObject>